--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,30 @@
 body {
   box-sizing: border-box;
 }
+html,
+body,
+div,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+li,
+ol,
+table,
+td,
+tr,
+th,
+form {
+  padding: 0;
+  margin: 0;
+}
+ul,
+li,
+ol {
+  list-style: none;
+}
 
