--- a/src/layouts/header/index.scss
+++ b/src/layouts/header/index.scss
@@ -6,23 +6,28 @@
   align-items: center;
   color: #fff;
   padding: 0 16px;
+
   .left_box {
     font-size: 18px;
     font-weight: 500;
     display: flex;
     align-items: center;
+
     img {
       margin-right: 16px;
     }
+
     .title {
       padding-right: 16px;
     }
+
     .line {
       width: 2px;
       height: 20px;
       background: rgba(255, 255, 255, 0.4);
       display: inline-block;
     }
+
     .patient_information {
       padding-left: 16px;
       font-size: 14px;
@@ -30,6 +35,7 @@
       color: #ffffff;
     }
   }
+
   .right_box {
     .avatar {
       cursor: pointer;
@@ -44,26 +50,34 @@
       font-weight: 500;
       font-size: 12px;
     }
+
+    .ant-popover-inner-content {
+      padding: 0
+    }
+
     .menu_wrap {
       .menu {
         span {
+          width: 100%;
           display: inline-block;
           padding: 9px 30px 9px 44px;
           cursor: pointer;
+
           &:hover {
             color: #23a3ab;
             background: rgba(0, 196, 223, 0.08);
           }
         }
+
         &:first-child {
-          background: url("../../assets/layout/logout.png") 24px center
-            no-repeat;
+          background: url("../../assets/layout/logout.png") 24px center no-repeat;
+
           &:hover {
-            background: url("../../assets/layout/logoutOn.png") 24px center
-              no-repeat;
+            background: url("../../assets/layout/logoutOn.png") 24px center no-repeat;
           }
         }
       }
+
     }
   }
 }
