--- a/src/layouts/nav/index.scss
+++ b/src/layouts/nav/index.scss
@@ -12,6 +12,9 @@
     font-weight: 500;
     margin-right: 32px;
     cursor: pointer;
+    .item{
+      margin-left: 8px;
+    }
 
     img {
       margin-right: 4px;
