feat: order module

--- a/src/pages/courseManagement/index.scss
+++ b/src/pages/courseManagement/index.scss
@@ -1,3 +1,9 @@
-.course_anagement{
-  padding: 50px;
+.course_management_wrap {
+  padding: 16px;
+
+  &_title {
+    padding: 8px 0 16px 0;
+    display: flex;
+    justify-content: space-between;
+  }
 }
