--- a/src/pages/courseManagement/index.scss
+++ b/src/pages/courseManagement/index.scss
@@ -2,7 +2,7 @@
   padding: 16px;
 
   &_title {
-    padding: 8px 0 16px 0;
+    padding: 8px 0 16px;
     display: flex;
     justify-content: space-between;
   }
