--- a/src/pages/courseManagement/index.scss
+++ b/src/pages/courseManagement/index.scss
@@ -44,7 +44,12 @@
         text-overflow: ellipsis;
       }
 
+      &-teacher {
+        color: #999;
+      }
+
       &-price{
+        margin-top: 12px;
         color: #f15f14;
       }
     }
