--- a/src/pages/courseManagement/index.scss
+++ b/src/pages/courseManagement/index.scss
@@ -1,8 +1,11 @@
+@import "../../assets/styles/mixin";
+
 .course-management {
   $width: 1216px;
 
   padding: 16px;
-  @include flex(center, center, column);
+  @include flex(center, center);
+  flex-direction: column;
   background-color: rgd(0,0,0,0.1);
 
   &-title {
@@ -19,7 +22,8 @@
     
     &-item {
       cursor: pointer;
-      @include flex(flex-start, flex-start, column);
+      @include flex(flex-start, flex-start);
+      flex-direction: column;
       border-radius: 6px;
       width: 218px;
       padding: 16px;
