--- a/src/layouts/header/index.scss
+++ b/src/layouts/header/index.scss
@@ -1,83 +1,103 @@
+@import "../../assets/styles/mixin";
+
 .header_wrap {
-  height: 52px;
-  background: #080e1c;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #fff;
-  padding: 0 16px;
+  $color: #23a3ab;
+  $width: 1216px;
+  @include flex(center, center);
+  box-shadow: inset 0px -1px 0px 1px rgba(214, 214, 214, 0.35);
 
-  .left_box {
-    font-size: 18px;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
+  .header {
+    width: $width;
+    height: 52px;
+    @include flex(space-between, center);
+    color: $color;
 
-    img {
-      margin-right: 16px;
-    }
-
-    .title {
-      padding-right: 16px;
-    }
-
-    .line {
-      width: 2px;
-      height: 20px;
-      background: rgba(255, 255, 255, 0.4);
-      display: inline-block;
-    }
-
-    .patient_information {
-      padding-left: 16px;
-      font-size: 14px;
-      font-weight: 400;
-      color: #ffffff;
-    }
-  }
-
-  .right_box {
-    .avatar {
-      cursor: pointer;
-      display: inline-block;
-      width: 36px;
-      height: 36px;
-      text-align: center;
-      line-height: 36px;
-      border-radius: 50%;
-      background: #313b53;
-      color: #ffffff;
+    .left_box {
+      font-size: 18px;
       font-weight: 500;
-      font-size: 12px;
+      @include flex(flex-start, center);
+
+
+      img {
+        margin-right: 16px;
+      }
+
+      .title {
+        cursor: pointer;
+        padding-right: 16px;
+      }
     }
 
-    .ant-popover-inner-content {
-      padding: 0
-    }
+    .right_box {
+      @include flex(flex-end, center);
+      flex: 1;
 
-    .menu_wrap {
-      .menu {
-        span {
-          width: 100%;
-          display: inline-block;
-          padding: 9px 30px 9px 44px;
+      .ant-input-affix-wrapper {
+        border-radius: 18px;
+      }
+
+      .nav {
+        padding: 0 24px;
+        @include flex(flex-end, center);
+
+        .menu_item {
+          display: flex;
+          align-items: center;
+          font-size: 16px;
+          font-weight: 500;
+          margin-right: 32px;
+          color: #666;
           cursor: pointer;
 
-          &:hover {
-            color: #23a3ab;
-            background: rgba(0, 196, 223, 0.08);
+          .item {
+            margin-left: 8px;
           }
         }
 
-        &:first-child {
-          background: url("../../assets/layout/logout.png") 24px center no-repeat;
+        .menu_item_active {
+          color: #23a3ab;
+        }
 
-          &:hover {
-            background: url("../../assets/layout/logoutOn.png") 24px center no-repeat;
-          }
+        .menu_item:hover {
+          color: #23a3ab;
         }
       }
 
+      .avatar {
+        cursor: pointer;
+        display: inline-block;
+        width: 36px;
+        height: 36px;
+        text-align: center;
+        line-height: 36px;
+        border-radius: 50%;
+        background: $color;
+        color: #ffffff;
+        font-weight: 500;
+        font-size: 12px;
+      }
+
+      .ant-popover-inner-content {
+        padding: 0
+      }
+
+      .menu_wrap {
+        .menu {
+          span {
+            width: 100%;
+            display: inline-block;
+            padding: 9px 30px 9px 16px;
+            cursor: pointer;
+            border-bottom: 1px solid rgba(214, 214, 214, 0.35);
+
+            &:hover {
+              color: $color;
+              background: rgba(0, 196, 223, 0.08);
+            }
+          }
+        }
+
+      }
     }
   }
 }
