--- a/src/pages/courseManagement/detail/index.scss
+++ b/src/pages/courseManagement/detail/index.scss
@@ -2,6 +2,7 @@
     $width: 1216px;
     
     background-color: rgd(0, 0, 0, 0.1);
+    padding-top: 24px;
 
     &-content {
         width: $width;
